// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render properly with default prop values 1`] = `
<Bootstrap(Modal)
  className="confirmmodal component"
  show={true}
>
  <ModalHeader
    className="modal-header"
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle
      className="modal-title"
    >
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    className="modal-body"
  >
    <p
      className="modal-message"
    >
      Are you sure you want to do this?
    </p>
  </ModalBody>
  <ModalFooter
    className="modal-footer"
  >
    <Button
      active={false}
      className="modal-cancel button exit"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Cancel
    </Button>
    <Button
      active={false}
      className="modal-ok button danger"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      OK
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Should render properly with optional prop values 1`] = `
<Bootstrap(Modal)
  className="confirmmodal component"
  show={true}
>
  <ModalHeader
    className="modal-header"
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle
      className="modal-title"
    >
      test
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    className="modal-body"
  >
    <p
      className="modal-message"
    >
      Are you sure you want to do this?
    </p>
  </ModalBody>
  <ModalFooter
    className="modal-footer"
  >
    <Button
      active={false}
      className="modal-cancel button exit"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      no
    </Button>
    <Button
      active={false}
      className="modal-ok button danger"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      yes
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;
